@@ -200,6 +200,7 @@ FileItem.read=read
 FileItem.normal=normal
 FileItem.high=high
 FileItem.donotdownload=Do not download
+FileItem.delete=Delete
 FilesView.name=Name
 FilesView.name.fastRename=Fast Renaming
 FilesView.size=Size
